--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">SampleWifiConnector</string>
+    <string name="app_name">TestWifiConnection</string>
+    <string name="connected">Connected</string>
+    <string name="connected_to_frm">Connected to %1$s</string>
+    <string name="unavailable">Unavailable</string>
 </resources>
